# Proyecto_OS_1

./: CMakeLists.txt  README.md
BasicStructures/: interval_structure.c  interval_structure.h  process_structure.c  process_structure.h
ThreadManagement/: process_admin.c  process_admin.h
interface/: Makefile  interface.c  interface.h
pruebas/: mapeo.c
